📝 docs: update README with observability stack, idempotency and k6 scenarios
- Add Prometheus + Grafana to infrastructure diagram and how-to section
- Document 3 k6 scenarios (baseline/stress/spike) with SCENARIO env var
- Add Redis idempotency to both backend stacks and sequence diagram
- Update folder structure with scripts/monitoring/ tree
- Add authorship block (Felippe Gustavo, USP ESALQ, Prof. Marcos Jardel)
- Document ZGC Generational and -Djdk.tracePinnedThreads=full flags
- Add scientific note about unique X-Idempotency-Key per VU/iteration

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>